# kivo-protocol

./: Anchor.toml  README.md  package-lock.json  package.json  recover.json  tsconfig.json
programs/kivo/: Cargo.toml
programs/kivo/src/: constants.rs  error.rs  lib.rs
programs/kivo/src/instructions/: accept_contract.rs  contract.rs  contract_accept.rs  contract_controller.rs  contract_creation.rs  contract_manager.rs  contract_propose.rs  contract_reject.rs  deposit.rs  disable_preferred_token.rs  fulfill_request.rs  group_invite.rs  group_join.rs  group_kick.rs  group_leave.rs  group_transfer.rs  initialize_user.rs  initialize_vaults.rs  jupiter.rs  lending_deposit.rs  mod.rs  reject_contract.rs  settle_contract_payment.rs  transaction.rs  transaction_execute.rs  transaction_request_create.rs  transaction_request_fufill.rs  transaction_request_reject.rs  unwrap_withdrawal.rs  user.rs  user_add_friend.rs  user_unwrap_withdraw.rs  user_withdraw.rs  username_edit.rs
programs/kivo/src/instructions/contract/: contract_accept.rs  contract_propose.rs  mod.rs
programs/kivo/src/instructions/group/: ape.rs  freeze.rs  group_create.rs  group_deposit.rs  group_deposit_signed.rs  group_invite.rs  group_join.rs  group_kick.rs  group_leave.rs  group_transfer.rs  group_vaults_init.rs  group_withdraw.rs  group_withdraw_wallet.rs  group_withdrawal.rs  mod.rs  paidgroup_create.rs  paidgroup_invite.rs  paidgroup_join.rs  paidgroup_makepayment.rs  split.rs  swap_split.rs
programs/kivo/src/instructions/lend/: mod.rs
programs/kivo/src/instructions/transaction/: mod.rs  preferred_tx_exec.rs  preferred_tx_fulfill.rs  transaction_execute.rs  transaction_request_create.rs  transaction_request_fufill.rs  transaction_request_reject.rs  transaction_swap_exec.rs  transaction_swap_request_fulfill.rs
programs/kivo/src/instructions/user/: mod.rs  user_init.rs  user_preferred_token_set.rs  user_unwrap_withdraw.rs  user_vaults_init.rs  user_withdraw.rs
programs/kivo/src/state/: contract.rs  group.rs  mod.rs  traits.rs  transaction.rs  user.rs
programs/yield-program/: Cargo.toml
programs/yield-program/src/: constants.rs  lib.rs
programs/yield-program/src/instructions/: mod.rs  passive.rs  passive_borrow.rs  passive_claim.rs  passive_deposit.rs  passive_init_vaults.rs  passive_initialize.rs  passive_repay.rs  passive_withdraw.rs
programs/yield-program/src/state/: lending_account.rs  mod.rs
tests/: kivo.ts  test-helpers.ts
