[package]
name = "kivo"
version = "0.1.0"
description = "decentralized banking on solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kivo"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
jupiter-cpi = "4.0.3"
spl-token-swap = { version = "3.0.0", features = [ "no-entrypoint" ]}
clockwork-sdk = "2.0.17"
static_assertions = "1.1.0"
bytemuck = { version = "1.4.0" }