[package]
name = "kivo"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kivo"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.27.0", features = ["init-if-needed"] }
anchor-spl = "0.27.0"
static_assertions = "1.1.0"
bytemuck = { version = "1.4.0" }
spl-stake-pool = "0.6.4"
