[package]
name = "yield-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "yield_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
bytemuck = { version = "1.4.0" }
marginfi = { git = "https://github.com/mrgnlabs/marginfi-v2.git", features = ["cpi", "devnet"] }
kivo = { git = "https://github.com/soundsonacid/kivo-protocol.git", features = ["cpi"]}
half = "=2.2.0"